trying to fix overflow

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -145,7 +145,7 @@ li {
     transform: translateY(10px) rotate(45deg);
   }
   .hamburger.active .bar:nth-child(3) {
-    transform: translateY(-9px) rotate(-45deg);
+    transform: translateY(-10px) rotate(-45deg);
   }
 }
 @media (max-width: 360px) {
