--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,6 @@
   font-family: Poppins;
 }
 body {
+  width: 100%;
   overflow-x: hidden;
 }
